--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,18 +1,48 @@
-.contour {
-    width: 20rem;
-    background-color: #000;
-    border-bottom-right-radius: 25rem;
-    border-top-right-radius: 25rem;
-    box-shadow: $shadow-white;
-    padding: .5rem 0.5rem;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+.btn {
+    padding: 1.25rem 2.5rem;
+    border: none;
+    background-color: $color-primary;
     cursor: pointer;
+    border-radius: 25rem;
+    box-shadow: $shadow-black;
+    transition: all .3s ease-in-out;
 
-    p {
-        color: $color-primary !important;
-        font-family: "Winky Rough", sans-serif;
-        font-weight: 600;
+    a {
+        color: #fff;
+        font-size: 1.4rem;
+        font-weight: 500;
+    }
+
+    &:hover {
+        background-color: #000 ;
+    }
+
+    &:active {
+        transform: scale(.9);
+    }
+}
+
+.btn-transparent {
+    padding: 1.25rem 2.5rem;
+    border: .1rem solid $color-primary;
+    background-color: transparent;
+    cursor: pointer;
+    border-radius: 25rem;
+    box-shadow: $shadow-black;
+    transition: all .3s ease-in-out;
+
+    a {
+        color: #fff;
+        font-size: 1.4rem;
+        font-weight: 500;
+    }
+
+    &:hover {
+        background-color: #000 ;
+        border: .1rem solid #000;
+    }
+
+    &:active {
+        transform: scale(.9);
     }
 }
