--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -34,13 +34,20 @@
             padding: 1rem 0;
         }
 
-        div i {
-            padding: 1.5rem 1.8rem;
+        i {
+            padding: 2.5rem 2.5rem;
             border-radius: 50%;
             border: 1px solid #fff;
             font-size: 1.5rem;
             color: #fff;
             cursor: pointer;
+            transition: all .3s ease-in-out;
+
+            &:hover {
+                transform: scale(1.1);
+                color: $color-primary;
+                border: 1px solid $color-primary;
+            }
         }
 
     }
@@ -59,6 +66,19 @@
           
             transform: scale(2.2) translateY(8rem);
         }
+    }
+
+    .contour {
+        display: flex;
+        gap: 2.5rem;
+        align-items: center;
+
+        .break {
+            display: block;
+            height: .1rem;
+            width: 10rem;
+            background-color: #fff;
+        }                                           
     }
 
     &::before {
@@ -81,6 +101,7 @@
         clip-path: polygon(0% 10%, 100% 0%, 90% 90%, 10% 100%);
         z-index: 0;
     }
+
 }
 
 
@@ -97,16 +118,6 @@
     padding: 5rem 5rem 15rem 5rem;
     gap: 5rem;
 
-    h2 {
-        font-size: 4rem;
-        color: #fff;
-        font-family: "Winky Rough", sans-serif;
-
-        span {
-            color: $color-primary;
-            font-size: 6rem;
-        }
-    }
 
     &__bgtitle {
         position: absolute;
@@ -146,7 +157,7 @@
         }
 
         &-left, &-right {
-            width: 35%;
+            width: 45%;
             height: auto;
             font-size: 1.5rem;
             box-shadow: 0 0 1rem #000000a2;
@@ -307,4 +318,123 @@
         z-index: 0;
     }
     
+}
+
+.section4 {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    min-height: 100vh;
+    width: 100%;
+    background-image: $background;
+    position: relative;
+
+     &__nextPrev {
+        position: absolute;
+        width: 98vw;
+
+        button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.4);
+            border: none;
+            padding: 0.5rem;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: background 0.3s ease;
+
+            i {
+            font-size: 2.5rem;
+            color: #fff;
+            }
+
+            &:hover {
+            background: rgba(255, 255, 255, 0.2);
+            }
+
+            &:focus {
+            outline: 2px solid #fff;
+            outline-offset: 2px;
+            }
+            }
+
+            .left {
+                left: 1rem;
+            }
+
+            .right {
+                right: 1rem;
+            }
+        }
+
+    .break {
+        display: block;
+        height: .1rem;
+        width: 25%;
+        background-color: #c3c3c3;
+        margin: 1rem 0;
+    }
+
+    &__portfolio {
+        margin-top: 10rem;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 7rem;
+
+
+        &-item {
+
+            span {
+                font-size: 1.2rem;
+                color: #c3c3c3;
+            }
+            
+            &--featured {
+                font-size: 3rem;
+                color: $color-primary;
+            }
+
+            h1 {
+                color: #fff;
+            }
+
+            p {
+                color: #c3c3c3;
+                font-size: 2rem;
+                width: 45%;
+            }
+
+            &--button {
+                margin: 2rem 0;
+
+                a {
+                    text-decoration: none;
+                    color: #fff;
+                }
+            }
+        }
+
+        &-image {
+
+            max-width: 50vw;
+
+            img {
+                width: 100%;
+                height: auto;
+                border-radius: 10px;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+                object-fit: cover;
+                cursor: pointer;
+                transition: all .3s ease-in-out;
+
+                &:hover {
+                    transform: scale(1.025);
+                    box-shadow: $shadow-black;
+                }
+            }
+        }
+    }
 }
